# ai-agents

./: CLAUDE.md  README.md  main.py
auth/: __init__.py  login_handler.py
browser/: __init__.py  session_manager.py
extractor/: tweet_extractor.py
navigation/: bookmarks_page.py
python-snake-game/: .gitignore  README.md  main.py  pyproject.toml
storage/: json_store.py
tests/: test_bookmark_model.py  test_json_store.py  test_retry.py
x-bookmarks-scraper/: .env.example  .gitignore  implementation_plan.md.resolved  main.py  pyproject.toml  task.md.resolved  test_out.txt  test_url.py
x-bookmarks-scraper/auth/: credential_manager.py  login_handler.py
x-bookmarks-scraper/browser/: browser_manager.py
x-bookmarks-scraper/extractor/: __init__.py  base_scraper.py  browser_scraper.py  graphql_parser.py  graphql_scraper.py  scraper_factory.py  tweet_extractor.py
x-bookmarks-scraper/navigation/: __init__.py  scroll_manager.py
x-bookmarks-scraper/state/: __init__.py  scraper_state.py
x-bookmarks-scraper/storage/: __init__.py  bookmark_model.py  json_store.py
x-bookmarks-scraper/tests/: test_bookmark_model.py  test_config.py  test_graphql_parser.py  test_json_store.py  test_scraper_state.py
x-bookmarks-scraper/utils/: __init__.py  config.py  logger.py  retry.py
